# App

./: Cargo.toml  index.html
src/: App.tsx  main.rs
src/components/: AboutSection.tsx  AuthPage.tsx  Dashboard.tsx  Header.tsx  MiningSection.tsx  SendTokens.tsx  TransactionHistory.tsx  WalletCreation.tsx
src/hooks/: useAuth.ts  useTransactions.ts
src/types/: index.ts
src/utils/: crypto.ts
